--- a/package.json
+++ b/package.json
@@ -12,26 +12,29 @@
     "@ai-sdk/google": "^1.2.19",
     "@ai-sdk/react": "^1.2.12",
     "@openrouter/ai-sdk-provider": "^0.7.2",
+    "@shikijs/core": "^3.7.0",
+    "@shikijs/langs": "^3.7.0",
+    "@shikijs/themes": "^3.7.0",
     "ai": "^4.3.16",
     "clsx": "^2.1.1",
+    "marked": "^16.0.0",
     "motion": "^12.19.1",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "shiki": "^3.7.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.352",
+    "@iconify/json": "^2.2.357",
     "@iconify/tailwind4": "^1.0.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
