--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@shikijs/themes": "^3.7.0",
     "ai": "^4.3.16",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "marked": "^16.0.0",
     "motion": "^12.19.1",
     "next": "15.3.4",
@@ -29,8 +30,6 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
-    "@iconify/json": "^2.2.357",
-    "@iconify/tailwind4": "^1.0.6",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
