--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.19",
+    "@ai-sdk/openai": "^1.3.23",
     "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/xai": "^1.2.17",
     "@openrouter/ai-sdk-provider": "^0.7.2",
     "@shikijs/core": "^3.7.0",
     "@shikijs/langs": "^3.7.0",
