--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.17",
     "@openrouter/ai-sdk-provider": "^0.7.2",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@shikijs/core": "^3.7.0",
     "@shikijs/langs": "^3.7.0",
     "@shikijs/themes": "^3.7.0",
+    "@types/uuid": "^10.0.0",
     "ai": "^4.3.16",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "marked": "^16.0.0",
@@ -30,7 +35,9 @@
     "remark-gfm": "^4.0.1",
     "shiki": "^3.7.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.67"
+    "uuid": "^11.1.0",
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -38,6 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
