--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.17",
     "@openrouter/ai-sdk-provider": "^0.7.2",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@shikijs/core": "^3.7.0",
     "@shikijs/langs": "^3.7.0",
     "@shikijs/themes": "^3.7.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/uuid": "^10.0.0",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.525.0",
     "marked": "^16.0.0",
     "motion": "^12.19.1",
