--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "remark-gfm": "^4.0.1",
     "shiki": "^3.7.0",
     "tailwind-merge": "^3.3.1",
+    "undici": "^7.16.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.67",
     "zustand": "^5.0.6"
