--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^1.2.12",
-    "@ai-sdk/google": "^1.2.19",
-    "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/react": "^1.2.12",
-    "@ai-sdk/xai": "^1.2.17",
-    "@openrouter/ai-sdk-provider": "^0.7.2",
+    "@ai-sdk/anthropic": "^2.0.17",
+    "@ai-sdk/google": "^2.0.14",
+    "@ai-sdk/openai": "^2.0.30",
+    "@ai-sdk/react": "^2.0.44",
+    "@ai-sdk/xai": "^2.0.19",
+    "@openrouter/ai-sdk-provider": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -23,9 +23,10 @@
     "@shikijs/core": "^3.7.0",
     "@shikijs/langs": "^3.7.0",
     "@shikijs/themes": "^3.7.0",
+    "@tavily/core": "^0.5.12",
     "@types/crypto-js": "^4.2.2",
     "@types/uuid": "^10.0.0",
-    "ai": "^4.3.16",
+    "ai": "^5.0.44",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
@@ -41,7 +42,7 @@
     "tailwind-merge": "^3.3.1",
     "undici": "^7.16.0",
     "uuid": "^11.1.0",
-    "zod": "^3.25.67",
+    "zod": "^4.1.8",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
