--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/react": "^2.0.44",
     "@ai-sdk/xai": "^2.0.19",
     "@openrouter/ai-sdk-provider": "^1.2.0",
+    "@modelcontextprotocol/sdk": "^1.18.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
